# blockchain-indexer

./: .gitignore  Cargo.toml  README.md
crates/axum-server/: Cargo.toml
crates/axum-server/src/: server.rs
crates/backend/: Cargo.toml
crates/backend/src/: args.rs  main.rs
crates/backend/src/database/: add_token_price_history_record.rs  create_balance_history.rs  create_token_price_history.rs  get_existing_wallets.rs  get_token_symbols.rs  mod.rs  update_token_price_history_record.rs
crates/backend/src/models/: mod.rs  transfer_history_record.rs  wallet.rs
crates/backend/src/models/errors/: mod.rs
crates/backend/src/models/responses/: kline_binance_response.rs  mod.rs  starting_balance.rs  token_prices.rs  transfer_history.rs
crates/backend/src/networking/: get_block_for_date.rs  get_block_request.rs  get_starting_balance.rs  get_token_price_history.rs  get_transfers_history.rs  mod.rs
crates/backend/src/streams/: add_wallet_address_to_moralis_stream.rs  connect_price_stream.rs  create_moralis_stream.rs  delete_wallet_address_from_moralis_stream.rs  get_price_stream.rs  handle_moralis_stream_response.rs  handle_price_stream_response.rs  handle_wallet_stream_response.rs  mod.rs
crates/backend/src/utils/: calculate_balance_history.rs  get_balance_history.rs  get_balance_history_for_wallet.rs  get_multiple_token_price_history.rs  handle_api_ratelimit.rs  mod.rs
crates/jp/: Cargo.toml
crates/jp/src/: main.rs
crates/jp/src/database/: create_balance_history.rs
crates/jp/src/models/: transfer_history_record.rs
crates/jp/src/models/errors/: mod.rs
crates/jp/src/networking/: get_starting_balance.rs  get_transfers_history.rs  mod.rs
crates/jp/src/utils/: get_balance_history.rs  get_balance_history_for_wallet.rs
src/: main.rs
src/database/: get_existing_wallets.rs
src/models/: wallet.rs
src/models/responses/: mod.rs  starting_balance.rs  transfer_history.rs
src/networking/: get_block_request.rs  get_starting_balance.rs  get_transfers_history.rs
src/utils/: calculate_balance_history.rs  get_balance_history_for_wallet.rs
