[workspace]
resolver = "2"
members = ["crates/axum-server", "crates/jp"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum-server = { path = "crates/axum-server" }
chrono = "0.4.38"
futures = "0.3.30"
num-bigint = { version = "0.4.5", features = ["serde"] }
num-traits = "0.2.19"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = { version = "1.4.2", features = ["kv-mem"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
