[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum-server.workspace = true
chrono.workspace = true
futures.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
reqwest.workspace = true
serde.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
