[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum-server.workspace = true
chrono.workspace = true
futures.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ethers.workspace = true
rand = "0.8.5"
tokio-tungstenite.workspace = true
